refactor: change home and about url routes

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">CMS</a>
+          <a class="navbar-brand" href="{% url 'core:home' %}">CMS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,7 +29,7 @@
               </li>
               {% endif %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link" href="{% url 'core:about' %}">About</a>
               </li>
             </ul>
           </div>
