--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         <div class="card-body">
           <h5 class="card-title">Coming Soon!</h5>
           <p class="card-text">This site is still under development!</p>
-          <a href="{% url 'about' %}" class="btn btn-primary">About this site</a>
+          <a href="{% url 'core:about' %}" class="btn btn-primary">About this site</a>
         </div>
         <div class="card-footer text-muted">
           victor.musembi11@gmail.com
