--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
+              </li>
               {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'core:about' %}">About</a>
