--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -6,6 +6,29 @@
 
 {% block body %}
 
-    <h1>User Registration View</h1>
+    <h1>User Registration Form</h1>
+
+    <form action="{% url 'accounts:register' %}" method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label class="form-label">Username</label>
+            <input type="username" name="username" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Email address</label>
+          <input type="email" name="email" class="form-control">
+          <div class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Password</label>
+          <input type="password" name="password1" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Confirm Password</label>
+            <input type="password" name="password2" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+        <br>
+    </form>
 
 {% endblock body %}
