feat: display form errors styled with bootstrap

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -12,21 +12,40 @@
         {% csrf_token %}
         <div class="mb-3">
             <label class="form-label">Username</label>
-            <input type="username" name="username" class="form-control">
+            <input type="text" name="username" class="form-control">
         </div>
+        {% if form.errors.username %}
+            <div class="alert alert-danger" role="alert">
+                {{ form.errors.username }}
+            </div>
+        {% endif %}
         <div class="mb-3">
-          <label class="form-label">Email address</label>
-          <input type="email" name="email" class="form-control">
-          <div class="form-text">We'll never share your email with anyone else.</div>
+            <label class="form-label">Email address</label>
+            <input type="email" name="email" class="form-control">
         </div>
+        {% if form.errors.email %}
+            <div class="alert alert-danger" role="alert">
+                {{ form.errors.email }}
+            </div>
+        {% endif %}
         <div class="mb-3">
-          <label class="form-label">Password</label>
-          <input type="password" name="password1" class="form-control">
+            <label class="form-label">Password</label>
+            <input type="password" name="password1" class="form-control">
         </div>
+        {% if form.errors.password1 %}
+            <div class="alert alert-danger" role="alert">
+                {{ form.errors.password1 }}
+            </div>
+        {% endif %}
         <div class="mb-3">
             <label class="form-label">Confirm Password</label>
             <input type="password" name="password2" class="form-control">
-        </div>
+         </div>
+        {% if form.errors.password2 %}
+            <div class="alert alert-danger" role="alert">
+                {{ form.errors.password2 }}
+            </div>
+        {% endif %}
         <button type="submit" class="btn btn-primary">Register</button>
         <br>
     </form>
